--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,38 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- swagger 使用 -->
+	<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+	<dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-swagger2</artifactId>
+	    <version>2.9.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+	<dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-swagger-ui</artifactId>
+	    <version>2.9.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.springfox/springfox-bean-validators -->
+	<!-- <dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-bean-validators</artifactId>
+	    <version>2.9.2</version>
+	</dependency> -->
 
 	</dependencies>
+	
+	
+	
 
 	<build>
 	
 	<plugins>
-	
+		<!-- mybatis 代码自动生成 -->
 		<plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
